<resources>
    <string name="app_name">씨향</string>
    <string name="common_cancel">취소</string>
    <string name="common_confirm">확인</string>
    <string name="common_select">선택</string>
    <string name="common_add">추가</string>
    <string name="common_upload">등록하기</string>
    <string name="common_empty_list">검색 결과가 비어있습니다.</string>

    <string name="need_permisson_storage">사진을 저장하기 위해서는 저장소 권한이 필요합니다.</string>

    <string name="hint_search_edit_text">내가 사용한 향수를 검색해보세요.</string>
    <string name="result_title_searching">‘%s’ 검색 결과입니다.</string>

    <string name="assign_user_ask_dialog_title">이 기능은 로그인이 필요합니다</string>
    <string name="assign_user_ask_dialog_message">로그인으로 이동하시겠습니까?</string>
    <string name="assign_user_ask_dialog_positive">확인</string>
    <string name="assign_user_ask_dialog_negative">취소</string>

    <!-- Sign Information -->
    <string name="sign_explain_label">간편하게 씨향 시작하기</string>
    <string name="sign_google_label">Google 계정으로 로그인</string>
    <string name="sign_un_used">로그인 없이 둘러보기</string>
    <string name="sign_name_description">닉네임을 만들어볼까요?</string>
    <string name="sign_title">씨향 시작하기.</string>
    <string name="sign_gender_description">간단한 정보를 알려주세요.</string>
    <string name="sign_information_name">닉네임</string>
    <string name="sign_information_name_hint">닉네임을 입력해주세요.</string>
    <string name="sign_information_gender_explain">해당 정보는 향수 맞춤 추천을 위해 활용됩니다 :)</string>
    <string name="sign_information_name_regex">공백, 특수문자를 제외한\n한글, 영어, 숫자로 이루어진 닉네임을 입력해주세요 :)\n이후에 언제든지 변경할 수 있습니다.</string>
    <string name="sign_information_title">씨향 시작하기.</string>
    <string name="sign_information_description">간단한 정보를 알려주세요.</string>
    <string name="sign_information_gender">성별</string>
    <string name="sign_information_male">남성</string>
    <string name="sign_information_female">여성</string>
    <string name="sign_information_unknown">선택안함</string>
    <string name="sign_information_age">나이</string>
    <string name="sign_information_age_hint">나이를 입력해주세요</string>
    <string name="sign_information_next_button">다음</string>

    <!-- Sign -->
    <string name="sign_duplicated_name">이미 사용되고 있는 닉네임입니다.</string>
    <string name="sign_complete_title">반갑습니다,\n%s님 :)</string>
    <string name="sign_complete_description">향수에 대한 다양한 이미지를 공유하고,\n이야기하는 씨향에 온 걸 환영해요.</string>
    <string name="sign_complete_start_button">시작하기</string>
    <string name="sign_need_valid_information">올바르게 모두 입력해주세요</string>

    <!-- Perfume Detail -->
    <string name="perfume_detail_scent_button">눈으로 시향하기</string>
    <string name="perfume_detail_scent_button_enabled">시향지를 준비중</string>
    <string name="perfume_info_pyramid">Perfume Pyramid</string>
    <string name="perfume_info_pyramid_top">Top</string>
    <string name="perfume_info_pyramid_middle">Middle</string>
    <string name="perfume_info_pyramid_base">Base</string>
    <string name="perfume_info_note">Notes</string>
    <string name="perfume_info_accords">Main Accords</string>
    <string name="perfume_info_type">Perfume Type</string>
    <string name="perfume_info_type_eau_de_perfume_title">오 드 퍼퓸</string>
    <string name="perfume_info_type_eau_de_perfume_description">적당한 지속시간과 향을 가진 향수를 찾는 사람에게 적당하며, 향수에 꽤 가까운 완성도임에도 불구하고 향수보다 값이 저렴한 것이 큰 장점이다.</string>
    <string name="perfume_info_affliction_rate">부향률</string>
    <string name="perfume_info_duration">지속 시간</string>

    <string name="main_today_perfume_header_title">오늘의 시향</string>
    <string name="main_today_perfume_header_content">%s를 눈으로 시향해 보세요.</string>
    <string name="refresh_another_perfume">다른 향수 보기</string>
    <string name="banner_title">향수, 스토리로 말해봐!</string>
    <string name="banner_description">내 맘대로 표현하고 눈으로 시향하자!</string>
    <string name="main_hot_story_header">지금 HOT한 씨향지</string>
    <string name="main_ranking_header">주간 인기랭킹</string>
    <string name="main_perfume_recommend_header">향수 추천</string>
    <string name="main_see_more">더보기</string>

    <string name="tutorial_seehyang_title">다양한 향수 이미지를\n통해 눈으로 시향해보세요 :)</string>
    <string name="tutorial_seehyang_description">직접 사용한 사람들이 올리는\n향수에 대한 이미지들을 통해 시향할 수 있습니다.</string>
    <string name="tutorial_editor_title">직접 써본 향수에 대해 \n이미지와 글로 표현해보세요.</string>
    <string name="tutorial_editor_description">다른 사람들에게 향수에 대한 느낌을\n 쉽고 간단하게 공유할 수 있습니다.</string>
    <string name="tutorial_detail_title">향수에 대한 느낌은 물론\n 상세정보를 간편하게 확인하세요.</string>
    <string name="tutorial_detail_description">향수의 노트와 어코드 등의 정보를\n 쉽게 확인할 수 있습니다.</string>
    <string name="tutorial_btn_next">"다음"</string>
    <string name="tutorial_btn_start">"시작하기"</string>
    <string name="btn_apply">"등록"</string>
    <string name="tv_more">"…더보기"</string>
    <string name="tag_label">태그 추가</string>
    <string name="tag_edit_hint">#태그 입력하기</string>
    <string name="tag_max_count">#최대 10개까지 등록</string>
    <string name="tag_regex">#%1$s</string>
    <string name="upload_label">씨향지 만들기</string>
    <string name="upload_only_show_to_me">나만 보기</string>
    <string name="upload_perfume_section_title">향수 선택</string>
    <string name="upload_tag_section_title">태그 추가</string>
    <string name="upload_success_story_save">스토리 업로드가 성공했습니다.</string>
    <string name="upload_failed_story_save_success">스토리 업로드가 실패했습니다.</string>
    <string name="upload_title">씨향지 만들기</string>
    <string name="editor_failed_save_edited_image">이미지 저장에 실패했습니다..</string>
    <string name="tv_sort">정렬</string>
    <string name="radio_btn_top">인기순</string>
    <string name="radio_btn_middle">최신 등록순</string>
    <string name="radio_btn_bottom">최다 댓글순</string>
    <string name="btn_finish">완료</string>
    <string name="comment">댓글</string>
    <string name="reply">답글</string>
    <string name="write_comment">댓글쓰기</string>
    <string name="perfume_recommend_title">꾸준히 사랑받는 향수</string>
    <string name="year">"년 "</string>
    <string name="month">"월 "</string>
    <string name="date">일</string>
    <string name="perfume_select_label">향수 선택</string>
    <string name="my_account_title">마이페이지</string>
    <string name="edit_profile_button">프로필 편집</string>
    <string name="my_account_in_process">준비중입니다.</string>
    <string name="settings_title">설정</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_version">버전정보</string>
    <string name="edit_profile_title">프로필 편집</string>
    <string name="edit_profile_nickname">닉네임</string>
    <string name="edit_profile_description">공백, 특수문자를 제외한\n한글, 영어, 숫자로 이루어진 닉네임을 입력해주세요 :)\n이후에 언제든지 변경할 수 있습니다.</string>
    <string name="edit_profile_complete">수정완료</string>

    <string name="open_file_error">파일을 열지 못했습니다.</string>
    <string name="uploading_file_error">이미지 업로드에 실패하였습니다.</string>
    <string name="detail_button">향수 상세 정보</string>
    <string name="page_count">%1$s/%2$s</string>
</resources>