<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_information_title"
        android:textAppearance="@style/TextAppearance.SeeHyangComponenets.Headline1"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_information_description"
        android:textAppearance="@style/TextAppearance.SeeHyangComponents.Body1"
        android:textColor="@color/point"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:text="@string/sign_information_gender"
        android:textAppearance="@style/TextAppearance.SeeHyangComponents.Body1"
        android:textColor="@color/grey2"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/descriptionTextView"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

    <CheckBox
        android:id="@+id/maleCheckBox"
        style="@style/Widget.SeeHyangComponents.CheckBox"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/sign_information_male"
        android:textAppearance="@style/TextAppearance.SeeHyangComponents.Headline4"
        android:textColor="@drawable/check_box_text_background"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/genderTextView"
        app:layout_constraintTop_toBottomOf="@id/genderTextView" />

    <CheckBox
        android:id="@+id/femaleCheckBox"
        style="@style/Widget.SeeHyangComponents.CheckBox"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/sign_information_female"
        android:textAppearance="@style/TextAppearance.SeeHyangComponents.Headline4"
        android:textColor="@drawable/check_box_text_background"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/maleCheckBox"
        app:layout_constraintStart_toEndOf="@id/maleCheckBox"
        app:layout_constraintTop_toTopOf="@id/maleCheckBox" />

    <CheckBox
        android:id="@+id/unknownCheckBox"
        style="@style/Widget.SeeHyangComponents.CheckBox"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/sign_information_unknown"
        android:textAppearance="@style/TextAppearance.SeeHyangComponents.Headline4"
        android:textColor="@drawable/check_box_text_background"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/femaleCheckBox"
        app:layout_constraintStart_toEndOf="@id/femaleCheckBox"
        app:layout_constraintTop_toTopOf="@id/femaleCheckBox" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_information_age"
        android:textAppearance="@style/TextAppearance.SeeHyangComponents.Body1"
        android:textColor="@color/grey2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/maleCheckBox"
        app:layout_constraintTop_toBottomOf="@id/maleCheckBox" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/sign_information_input_background"
        android:hint="@string/sign_information_age_hint"
        android:inputType="number"
        android:padding="13dp"
        android:textAppearance="@style/TextAppearance.SeeHyangComponents.Body1"
        android:textColor="@color/point"
        android:textColorHint="@color/grey4"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ageTextView" />

    <Button
        android:id="@+id/nextButton"
        style="@style/Widget.SeeHyangComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_information_next_button"
        android:textAppearance="@style/TextAppearance.SeeHyangComponents.Headline4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>