<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/editorFragment">
    <fragment
        android:id="@+id/editorFragment"
        android:name="com.mashup.lastgarden.ui.upload.editor.EditorFragment"
        android:label="EditorFragment">
        <action
            android:id="@+id/actionEditorFragmentToUploadFragment"
            app:destination="@id/uploadFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/uploadFragment"
        android:name="com.mashup.lastgarden.ui.upload.UploadFragment"
        android:label="@string/upload_label">
        <action
            android:id="@+id/actionUploadFragmentToTagInputFragment"
            app:destination="@id/tagInputFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />

        <action
            android:id="@+id/actionUploadFragmentToPerfumeSelectFragment"
            app:destination="@id/perfumeSelectFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/tagInputFragment"
        android:name="com.mashup.lastgarden.ui.upload.TagFragment"
        android:label="@string/tag_label" />

    <fragment
        android:id="@+id/perfumeSelectFragment"
        android:name="com.mashup.lastgarden.ui.upload.perfume.PerfumeSelectFragment"
        android:label="@string/perfume_select_label" />
</navigation>