<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sortBottomSheet"
    style="@style/AppModalStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_draggable="true"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/sortTextView"
        style="@style/TextAppearance.SeeHyangComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_sort"
        android:textColor="@color/point"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/ic_close_bottomsheet"
        app:layout_constraintBottom_toBottomOf="@id/sortTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sortTextView" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortTextView">

        <RadioButton
            android:id="@+id/radioTopButton"
            style="@style/TextAppearance.SeeHyangComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_btn_background"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/radio_btn_top"
            android:textColor="@color/grey1" />

        <RadioButton
            android:id="@+id/radioMiddleButton"
            style="@style/TextAppearance.SeeHyangComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:button="@drawable/radio_btn_background"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/radio_btn_middle"
            android:textColor="@color/grey1" />

        <RadioButton
            android:id="@+id/radioBottomButton"
            style="@style/TextAppearance.SeeHyangComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:button="@drawable/radio_btn_background"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/radio_btn_bottom"
            android:textColor="@color/grey1" />
    </RadioGroup>

    <TextView
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:background="@drawable/btn_apply_background_round"
        android:paddingVertical="15dp"
        android:text="@string/btn_finish"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="@id/radioGroup"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>