<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="174dp"
        android:src="@drawable/ic_text_logo_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_explain_label"
        android:textColor="@color/primaryColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/loginGoogleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginGoogleButton"
        style="@style/Widget.SeeHyangComponents.Button.OutLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="78dp"
        android:backgroundTint="@android:color/white"
        android:paddingHorizontal="8dp"
        android:paddingTop="9dp"
        android:paddingBottom="11dp"
        android:text="@string/sign_google_label"
        android:textColor="#505050"
        android:textStyle="bold"
        app:icon="@drawable/ic_google_login"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@id/unUsedSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/unUsedSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/sign_un_used"
        android:textColor="@color/primaryColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>